--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -14,7 +14,8 @@
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    flex-direction: row;
+    flex-direction: column;
+    cursor: pointer;
     gap: 2rem;
 }
 
@@ -24,12 +25,14 @@
     font-size: 45px;
     line-height: 58.5px;
     letter-spacing: 0.04em;
-    color: var(--color-white)
+    color: var(--color-white);
 }
 
 .app__specialMenu-menu_pizza,
 .app__specialMenu-menu_burger {
+    border: 1px solid var(--color-gold);
     flex: 1;
+    height: 100px;
     width: 100%;
     flex-direction: column;
     justify-content: center;
