--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   --font-base: 'Instrument Serif', serif;
   --font-alt: 'Open Sans', sans-serif;
 
-  --color-golden: #DCCA87;
+  --color-golden: #D8A437;
   --color-black: #000000;
   --color-gray: #545454;
   --color-crimson: #F5EFDB;
