--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: calc( 100vh - 130px);
+  min-height: calc(100vh - 130px);
 }
 
 .app__wrapper_info {
@@ -42,7 +42,7 @@
   margin-left: 2rem;
 }
 
-.app__react-icons{
+.app__react-icons {
   color: var(--color-golden);
   font-size: 2rem;
 }
@@ -58,20 +58,23 @@
 
 .custom__button {
   background-color: var(--color-crimson);
-    color: var(--color-black);
-    font-family: var(--font-base);
-    font-weight: 700;
-    letter-spacing: 0.3rem;
-    line-height: 28px;
-    height: 70px;
-    max-width: 360px;
-    width: 100%;
-    font-size: 1.4rem;
-    padding: 0.5rem 1.5rem;
-    border-radius: 35px;
-    border: none;
-    outline: none;
-    cursor: pointer;
+  color: var(--color-black);
+  font-family: var(--font-base);
+  font-weight: 700;
+  letter-spacing: 0.3rem;
+  line-height: 28px;
+  height: 70px;
+  max-width: 380px;
+  width: 100%;
+  font-size: 1.4rem;
+  padding: 0.5rem 1.5rem;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
+.custom__button:active {
+  transform: scale(0.96);
 }
 
 .p__cormorant {
@@ -80,7 +83,7 @@
   font-weight: 700;
   letter-spacing: 0.04em;
   text-transform: capitalize;
-  font-feature-settings: 'tnum' on, 'lnum' on;
+  font-feature-settings: 'tnum'on, 'lnum'on;
   line-height: 29.9px;
   font-size: 23px;
 }
@@ -109,6 +112,7 @@
 }
 
 @media screen and (min-width: 2000px) {
+
   .custom__button,
   .p__cormorant {
     font-size: 37px;
@@ -158,7 +162,7 @@
   .section__padding {
     padding: 4rem 2rem;
   }
-  
+
   .p__cormorant {
     font-size: 21px;
   }
