--- a/src/container/OrderCard/OrderCard.css
+++ b/src/container/OrderCard/OrderCard.css
@@ -62,6 +62,12 @@
     border-bottom: 1px solid var(--color-golden);
     font-size: 1.3rem;
 }
+
+.app__modal--order-delivery-number{
+    display: flex;
+    justify-content: space-between;
+}
+
 .app__modal--order-delivery-form-adress {
     display: flex;
     flex-direction: column;
@@ -73,6 +79,7 @@
     text-align: center;
     font-size: 1.4rem;
 }
+
 .app__modal--order-delivery-form-adress{
     border: none;
 }
@@ -98,9 +105,9 @@
     }
 }
 
-@media screen and (min-width: 1024px) {
+/* @media screen and (min-width: 1024px) {
     .app__modal--order-content {
         max-width: 1000px;
         width: 100%;
     }
-}
+} */
