--- a/src/components/FoodCard/FoodCard.css
+++ b/src/components/FoodCard/FoodCard.css
@@ -14,7 +14,7 @@
     position: fixed;
 }
 
-.app__modal--food-item {
+/* .app__modal--food-item {
     z-index: 2;
     position: relative;
     top: 50%;
@@ -31,8 +31,8 @@
     width: 100%;
     height: auto;
     gap: 0.5rem;
-}
-
+} */
+/* 
 .app__modal--food-item-option {
     display: flex;
     gap: 0.5rem;
@@ -70,7 +70,7 @@
     border-radius: 15px;
     font-size: 20px;
     cursor: pointer;
-}
+} */
 
 .modal-close {
     margin-top: 1rem;
